# orderline-dw

./: .gitignore  README.md  pyproject.toml
orderline-dw/: oltp2staging.py
orderline_dw_scripts/: oltp2staging.py
orderlinedw/: config.py  oltp2staging.py
orderlinedw/dbt/: dbt_project.yml
orderlinedw/dbt/models/dm_sales/: klant_t1.sql
orderlinedw/load/: oltp2staging.py
orderlinedw_scripts/: config.ini  config.py  config_dev.ini  oltp2staging.py
scripts/: config.ini  config.py  oltp2staging.py
